# SpeakOut

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  l10n.yaml  pubspec.yaml
.github/workflows/: ci.yml
assets/: aliyun_config.json.example  llm_config.json.example
assets/vocab/: education.json  finance.json  legal.json  medical.json  tech.json
docs/: aliyun_guide.md  aliyun_llm_setup.md  release_checklist.md  test_cases_ai_polish.md
docs/anti-patterns/: INDEX.md  dont-amend-after-hook-failure.md  dont-bypass-configservice.md  dont-feature-creep-in-bug-fix.md  dont-onnavigatetotab-int.md  dont-pick-pilot-by-tech-friendliness.md  dont-skip-full-test-on-release.md
docs/decisions/: INDEX.md  adr-001-no-sparkle.md  adr-002-clipboard-injection.md  adr-003-cloud-account-system.md  adr-004-context-aware-pilot-strategy.md  adr-005-v4-thinking-off-by-default.md
docs/dev_notes/: lookahead_dedup_solution.md
docs/review/: independent_technical_review_2026_03_19.md  response_to_review_2026_03_19.md  review_of_response_2026_03_19.md  review_round2_feedback_2026_03_20.md  review_round3_feedback_2026_03_20.md  review_round4_feedback_2026_03_20.md
docs/wiki/: ai_organize_design_2026_03_22.md  ai_polish_refactor_2026_03_07.md  ai_polish_ui_clarity_2026_03_08.md  blackbox_testing_2026_03_07.md  (+21 more)
gateway/: AGENTS.md  balance.txt  package-lock.json  package.json  wrangler.toml
lib/: api_check_temp.dart  main.dart
linux/: CMakeLists.txt
native_lib/: AGENTS.md  libnative_input.dylib  native_input.c  native_input.m
native_lib/linux/: CMakeLists.txt  native_input.c
native_lib/windows/: CMakeLists.txt  native_input.cpp
scripts/: ascii_preview.py  build_appstore.sh  clear_data.sh  create_styled_dmg.sh  extract_white_symbol.py  final_smart_outline.py  finalize_user_icon.py  fix_icon_alpha.py  inspect_icon.py  install.sh  mcp_calendar.py  preview_icon.py  recover_icon.py  refined_outline.py  round_icon.py  run_tests.sh  smart_extract_icon.py  test_all.sh  test_llm_latency.dart  uninstall.sh
test/: agent_suite_test.dart  core_engine_test.dart  integration_test.dart  offline_debug.dart  widget_test.dart
tools/: offline_debug.dart
windows/: CMakeLists.txt
(+149 files in other folders)
